<resources>
    <string name="app_name">怀旧经典</string>
    <string name="loading_failed">数据加载失败</string>
    <string name="author">怀旧经典</string>

    <string name="recommend">精彩推荐</string>
    <string name="score">评分：</string>
    <string name="videoType">类型：</string>
    <string name="region">地区：</string>
    <string name="airTime">上映时间：</string>
    <string name="video_intro">简介</string>
    <string name="video_comment">评论</string>
    <string name="set_theme">设置主题</string>
    <string name="theme">主题</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>


    <!--mine-->
    <string name="my_record">历史</string>
    <string name="my_down">缓存</string>
    <string name="my_collection">收藏</string>
    <string name="my_them">主题</string>
    <string name="clean">清除</string>
    <string name="mine_title">我的</string>
    <string name="theme_title">主题</string>

    <string name="share">分享</string>
    <string name="fuli">福利</string>
    <string name="setting">设置</string>
    <string name="feedback">建议</string>
    <string name="collection">收藏</string>
    <string name="download">下载</string>
    <string name="about">关于我们</string>
    <string name="close">关闭</string>
    <!--
      在string中添加连接，使用标签
    -->

    <string name="about_me">
        \n博 客：<a href="https://github.com/caoyongren">MasterMan</a>\n\nGithub：
                <a href="https://github.com/caoyongren/OldTv">OldTv</a>
    </string>

    <string name="expand">展开</string>
    <string name="shrink">收起</string>

    <string name="setting_recommend">推荐给好友</string>
    <string name="setting_recommend_content">发现一个看片神器\n\nhttps://github.com/caoyongren/OldTv</string>
    <string name="setting_recommend_url">https://github.com/GeekGhost/Ghost</string>
    <string name="setting_recommend_copy">复制</string>
    <string name="setting_recommend_clear">清理缓存</string>

    <string name="search_history">搜索记录</string>
    <string name="search_recommend">热门推荐</string>

    <!-- add str -->
    <string name="signature">只做一件事, 做好一件事!</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_theme">主题</string>
    <string name="good_choice">精选</string>
    <string name="topic">专题</string>
    <string name="find">发现</string>
    <string name="myself">我的</string>
    <string name="change_tv">换一批</string>
    <string name="no_more">没有了，点击换下一批</string>
    <string name="no_data">没有数据啦</string>
    <string name="click_again">再点一下　试试</string>
    <string name="more_and_more">更多加载中....</string>
    <string name="no_more_data">抱歉。。。。没有更多啦</string>
    <string name="about_old_tv">
        /*****************************\n\n
         * Email: MatthewCaoYongren@gmail.com\n\n
         * Blog: <a href = "http://blog.csdn.net/zhenxi2735768804/">http://blog.csdn.net/zhenxi2735768804/</a> \n\n
         * Githup: <a href = "https://github.com/caoyongren">https://github.com/caoyongren</a>\n\n
         * Motto: 坚持自己的选择, 不动摇！\n\n
         *****************************/
    </string>
    <string name="name_user">用户名：</string>
    <string name="pwd_user">密　码:</string>
    <string name="login_user">登录</string>
    <string name="registered_user">注册</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>

    <string name="confirm">确认密码</string>
</resources>
