<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBrownPrimaryDark"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <LinearLayout
        style="@style/login_layout"
        >
        <TextView
            android:id="@+id/dg_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_twenty"
            android:text="@string/name_user"
            />
        <EditText
            android:id="@+id/dg_input_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_fifteen"
            android:hint="@string/input_name"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/login_layout"
        >
        <TextView
            android:id="@+id/dg_user_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_twenty"
            android:text="@string/pwd_user"
            />
        <EditText
            android:id="@+id/dg_input_pwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_fifteen"
            android:hint="@string/input_pwd"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dg_confirm"
        style="@style/login_layout"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/dg_pwd_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_twenty"
            android:text="@string/confirm"
            />
        <EditText
            android:id="@+id/dg_input_pwd_confirm"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/login_layout"
        >
        <Button
            android:id="@+id/dg_button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_twenty"
            android:text="@string/login_user"
            />
        <Button
            android:id="@+id/dg_button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_twenty"
            android:text="@string/registered_user"
            />
    </LinearLayout>
</LinearLayout>
