<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--　抽屉的布局　-->
    <com.master.old.tv.widget.theme.ColorRelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/menuBackground">

        <LinearLayout
            android:id="@+id/top_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 用户头像　-->
            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/main_user_icon"
                android:layout_width="@dimen/icon_size_eighty"
                android:layout_height="@dimen/icon_size_eighty"
                android:layout_marginLeft="@dimen/size_twenty_five"
                android:layout_marginTop="@dimen/size_fifty_five"
                android:scaleType="fitXY"
                android:src="@mipmap/logo"
                app:riv_border_width="0dip"
                app:riv_corner_radius="@dimen/size_hundred" />

            <TextView
                android:id="@+id/main_user_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_six"
                android:layout_marginRight="@dimen/icon_size_eighty"
                android:layout_marginTop="@dimen/size_six"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/size_ten"
                android:text="@string/signature"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_sixteen" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/main_drawer_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_bottom_menu"
            android:layout_below="@+id/top_menu">

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="6"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drawer_tv_collect"
                    style="@style/MenuStyle"
                    android:text="@string/collection" />

                <TextView
                    android:id="@+id/drawer_tv_download"
                    style="@style/MenuStyle"
                    android:text="@string/download" />

                <TextView
                    android:id="@+id/drawer_tv_welfare"
                    style="@style/MenuStyle"
                    android:text="@string/fuli" />

                <TextView
                    android:id="@+id/draw_tv_share"
                    style="@style/MenuStyle"
                    android:text="@string/share" />

                <TextView
                    android:id="@+id/drawer_tv_feedback"
                    style="@style/MenuStyle"
                    android:text="@string/feedback" />

                <TextView
                    android:id="@+id/drawer_tv_settings"
                    style="@style/MenuStyle"
                    android:text="@string/setting" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/main_bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_tv_about"
                android:layout_marginLeft="@dimen/size_twenty_five"
                style="@style/DrawerBottomStyle"
                android:text="@string/about"/>

            <TextView
                android:id="@+id/main_tv_theme"
                android:layout_marginLeft="@dimen/size_fifteen"
                style="@style/DrawerBottomStyle"
                android:text="@string/theme"/>

        </LinearLayout>

    </com.master.old.tv.widget.theme.ColorRelativeLayout>

</LinearLayout>
