<com.master.old.tv.widget.layout.MainPagerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resideLayout"
    style="@style/container_style">

    <include layout="@layout/include_drawer_layout"/>

    <!--　底部的选项卡　-->
    <com.master.old.tv.widget.theme.ColorRelativeLayout
        style="@style/both_match_style"
        android:background="?attr/background">

        <com.master.old.tv.widget.customview.UnScrollPagerView
            android:id="@+id/viewpager_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingBottom="@dimen/size_forty" />

        <RadioGroup
            android:id="@+id/main_tab_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/bottom_bg"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_tab_choice"
                style="@style/tab_rb_style"
                android:checked="true"
                android:drawableTop="@drawable/tab_topic"
                android:text="@string/good_choice" />

            <RadioButton
                android:id="@+id/main_tab_topic"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_find"
                android:text="@string/topic" />

            <RadioButton
                android:id="@+id/main_tab_find"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_choice"
                android:text="@string/find" />

            <RadioButton
                android:id="@+id/main_tab_myself"
                style="@style/tab_rb_style"
                android:drawableTop="@drawable/tab_myself"
                android:text="@string/myself" />

        </RadioGroup>
    </com.master.old.tv.widget.theme.ColorRelativeLayout>

</com.master.old.tv.widget.layout.MainPagerLayout>