<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/both_match_style"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fg_myself_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fg_myself_toolbar"
            style="@style/ActionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

             <!-- 我的 title-->
            <include layout="@layout/include_top_title_layout" />

        </android.support.v7.widget.Toolbar>

        <com.master.old.tv.widget.theme.ColorRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_hundred_ten"
            android:background="?attr/mine_background"
            android:gravity="center_vertical|right">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_hundred_ten"
                android:textSize="@dimen/size_ten"
                android:textColor="@color/bel_red_text"
                android:text="@string/about_old_tv"
                />
        </com.master.old.tv.widget.theme.ColorRelativeLayout>

    </android.support.design.widget.AppBarLayout>
    <!--
    包含可滑动的布局内容(RecyclerView,NestedScrollView,不支持ListView，ScrollView)
    必须要设置app:layout_behavior="@string/appbar_scrolling_view_behavior"
    属性来告知CoordinatorLayout该组件是带有滑动行为的组件,
    然后CoordinatorLayout在接受到滑动时会通知AppBarLayout中可滑动的Toolbar可以滑出屏幕-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_ten"
            android:paddingRight="@dimen/size_ten"
            app:divider="@drawable/line"
            app:dividerPadding="@dimen/size_forty"
            app:showDividers="middle|end">

            <RelativeLayout
                android:id="@+id/fg_myself_rl_record"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/fg_myself_tv_history"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_record" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/right" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.jude.easyrecyclerview.EasyRecyclerView
                    android:id="@+id/fg_choice_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_hundred"
                    android:layout_marginLeft="@dimen/mine_list_view_margin_left"
                    android:layout_marginRight="@dimen/mine_list_view_margin_left"
                    app:scrollbars="none"
                    android:visibility="gone"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/fg_myslef_rl_down_cache"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/fg_myself_down_cache"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_down" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/size_ten"
                    android:background="@mipmap/right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/fg_myself_collection"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/fg_myself_tv_collection"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_collection" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/size_ten"
                    android:background="@mipmap/right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/fg_myself_theme"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/fg_myself_tv_them"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_them" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/size_ten"
                    android:background="@mipmap/right" />
            </RelativeLayout>


        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
